Mobile overflow fix, ugly favicons (#6)
* Fix mobile overflow issue

* Add some ugly favicons

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-size: $default-font-size;
   font-family: $default-font-stack;
